--- a/src/app/pages/clima/clima.component.html
+++ b/src/app/pages/clima/clima.component.html
@@ -1,1 +1,6 @@
-<button (click)="navegarParaTelaDePesquisa()">Pesquisar</button>
+<div class="clima-container"> 
+    <div>
+        <h1>Bem vindo ao clima-tempo</h1>
+        <button (click)="navegarParaTelaDePesquisa()">Pesquisar</button>
+    </div>
+</div>
