--- a/src/app/pages/clima/clima.component.html
+++ b/src/app/pages/clima/clima.component.html
@@ -1,6 +1,6 @@
 <div class="clima-container"> 
-    <div>
+    <div class="card">
         <h1>Bem vindo ao clima-tempo</h1>
-        <button (click)="navegarParaTelaDePesquisa()">Pesquisar</button>
+        <button class="button" (click)="navegarParaTelaDePesquisa()">Pesquisar</button>
     </div>
 </div>
