--- a/src/app/pages/clima/clima.component.scss
+++ b/src/app/pages/clima/clima.component.scss
@@ -2,6 +2,8 @@
     position: fixed;
     inset: 0;
     display: block;
+    background: url('https://picsum.photos/1920/1080') no-repeat center/cover;
+
 
     .clima-container {
         position: relative;
@@ -9,11 +11,38 @@
         display: grid;
         place-items: center;
         padding: 24px;
-    }
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        
+        h1 {
+            margin: 0;
+            font-size: 1.5rem;
+            font-weight: 700;
+            color: #ffffff;
+            text-align: center;
+        }
 
-    .card {
-        width: 100%;
-        max-width: 420px;
-        background: rgba(255, 255, 255, 0.4);
+        .card {
+            width: 100%;
+            max-width: 420px;
+
+            border-radius: 16px;
+            padding: 32px;
+            text-align: center;
+
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(5px) saturate(120%);
+        }
+        
+        button {
+                margin-top: 35px;
+                width: 150px;
+                background: rgba(255, 255, 255, 0.8);
+                color: #000000;
+                font-weight: 600;
+                cursor: pointer;
+                padding: 12px;
+                border-radius: 8px;
+                border: none;
+        }
     }
 }
