Refactor: nome-cidade.compoenent

--- a/src/app/components/nome-cidade/nome-cidade.component.scss
+++ b/src/app/components/nome-cidade/nome-cidade.component.scss
@@ -1,3 +1,7 @@
-:host {
-  display: block;
+.city {
+  margin: 0 0 8px;
+  font-size: 2rem;
+  font-weight: bold;
+  color: #ffffff;
+  letter-spacing: 0.5px;
 }
